--- a/produtos.html
+++ b/produtos.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166254652-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-166254652-1');
-</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Serviços de impressão 3d, protótipos, hobby, decoração, brinquedos, maquetes e pequenas tiragens de produtos.">
-	<meta name="keywords" content="3d, impressão, impressão 3d, prototipagem, vasos, decoração, florianópolis" />
-    <title>Impressão 3D</title>
+    <title>Produtos R3DTRY</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.3.2.css" rel="stylesheet">
-	
+
   </head>
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,40 +25,7 @@
 			</ul>
 		</div>
     </nav> <!--copiar cabecalho-->
-	  <!--carousel-->
-    <div class="banner">  <!--full tela colocar class banner // container mt-3 -->
-      <div class="row">
-        <div class="col-12">
-          <div id="carouselControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselControls" data-slide-to="1"></li>
-              <li data-target="#carouselControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/R_conj_diversos.webp" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/gatos1.webp" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/straps_R3D2.webp" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev" color="red">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div> <!--copiar carousel-->
+   
 	  <!--
     <div class="container">
       <div class="row">
@@ -100,45 +56,8 @@
       </div>
     </div>
 -->
-   <!-- <hr>
-    <h2 class="text-center">PROJETOS RECENTES</h2>
     <hr>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-			  <a href="#">
-				  <img class="card-img-top" src="images/sup_computador3.png" alt="Card image cap">
-				  <div class="card-caption d-none d-md-block">
-					  <h5>Straps coloridos </h5>
-				  </div>
-			  </a>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
--->
-    <h2 class="text-center">PRODUTOS EM DESTAQUE</h2>
+    <h2 class="text-center">NOSSOS PRODUTOS</h2>
     <hr>
 	 <div class="container">
     <div class="row">
@@ -198,13 +117,14 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Gato Vaso</a></h3>
-                    <span class="price">R$39.99</span>
+                    <span class="price">R$49.99</span>
                 </div>
             </div>
         </div>
 
     </div>
 </div>
+	  <hr>
     
 	<div id="contato" class="container text-white bg-dark p-2">
 	<!--<div id="contato" class="jumbotron">-->
@@ -213,8 +133,7 @@
 				<div class="text-center col-md-8 col-12 mx-auto">
 					<address>
 						<strong>R3DTRY</strong><br>
-
-						<img class="mr-2" src="images/icon_whats.PNG" width="20" alt="whats logo">(48) 99170-3910					
+						<img class="mr-2" src="images/icon_whats.PNG" width="20" alt="whats">(48) 99170-3910					
           			</address>
 				</div>
 			</div> <!--row-->
